[workspace]
members = ["cipher", "stream"]

[package]
name = "ensd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stream = { path = "stream" }
cipher = { path = "cipher" }
cpal = "0.15.2"
dasp_interpolate = { version = "0.11.0", features = ["all"] }
dasp_signal = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.4"
log = "0.4.19"
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.28"
async-trait = "0.1.68"

[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = [
    "console_appender",
    "file_appender",
    "pattern_encoder",
    "threshold_filter",
    "config_parsing",
    "toml_format"
]
