[package]
name = "ensd"
authors = ["rosingrind"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "crates" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.4"
log = "0.4.19"
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.28"
async-trait = "0.1.68"

[features]
default = ["logger"]
ci = []
logger = ["log4rs", "log4rs/all_components", "log4rs/config_parsing", "log4rs/toml_format"]

[dependencies.log4rs]
optional = true
version = "1.2.0"
default-features = false
