[workspace]
members = ["crates"]

[package]
name = "ensd"
authors = ["rosingrind"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "crates" }
serde = { workspace = true, features = ["derive"] }
toml = "0.8.14"
log = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
futures = "0.3.30"
async-trait = { workspace = true }

[features]
default = ["logger"]
ci = ["common/ci"]
logger = ["log4rs", "log4rs/all_components", "log4rs/config_parsing", "log4rs/toml_format"]

[dependencies.log4rs]
optional = true
version = "1.3.0"
default-features = false

[workspace.dependencies]
howler = { path = "crates/howler" }
async-trait = "0.1.80"
async-std = "1.12.0"
log = "0.4.21"
serde = { version = "1.0" }
