[workspace]
members = ["cipher", "howler", "socket", "stream"]

[package]
name = "common"
authors = ["rosingrind"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipher = { path = "cipher", optional = true }
howler = { path = "howler", optional = true }
socket = { path = "socket", optional = true }
stream = { path = "stream", optional = true }

[features]
default = ["all"]
ci = ["socket/ci"]
all = ["cipher", "howler", "socket", "stream"]

[workspace.dependencies]
howler = { path = "howler" }
aead = "*"
stun_codec = "0.3.2"
bytecodec = "0.4.15"
wasapi = "0.12.0"
windows = { version = "*", default-features = false }
async-std = "1.12.0"
log = "0.4.19"
serde = { version = "1.0" }
