[package]
name = "common"
authors = ["rosingrind"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipher = { path = "cipher", optional = true }
howler = { workspace = true, optional = true }
socket = { path = "socket", optional = true }
stream = { path = "stream", optional = true }

[features]
default = ["all"]
ci = ["socket/ci"]
all = ["cipher", "howler", "socket", "stream"]
