[package]
name = "stream"
authors = ["rosingrind"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
async-trait = "0.1.68"
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.28"
stun_codec = "0.3.2"
rand = "0.8.5"
bytecodec = "0.4.15"

[features]
ci = []
