[package]
name = "cipher"
authors = ["rosingrind"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
aes = { package = "aes", version = "0.8.3" }
cha = { package = "chacha20", version = "0.9" }
aes-gcm = "0.10.2"
chacha20poly1305 = "0.10.1"
aead = "0.5.2"
sha2 = "0.10.7"
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.12.0", features = ["attributes"] }
