[package]
name = "cipher"
authors = ["rosingrind"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
howler = { workspace = true }
log = { workspace = true }
aes = { package = "aes", version = "0.8.3" }
cha = { package = "chacha20", version = "0.9" }
aes-gcm = "0.10.2"
chacha20poly1305 = "0.10.1"
aead = "*"
sha2 = "0.10.7"
async-std = { workspace = true, features = ["attributes"] }
serde = { workspace = true, features = ["derive"] }
err = { package = "cipher_err", path = "err" }
