[package]
name = "howler"
authors = ["rosingrind"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { workspace = true }
stun_codec = { workspace = true }
bytecodec = { workspace = true }
windows = { workspace = true }
async-std = { workspace = true }
