[package]
name = "socket"
authors = ["rosingrind"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
howler = { workspace = true }
log = { workspace = true }
async-trait = "0.1.68"
async-std = { workspace = true, features = ["attributes"] }
futures = "0.3.28"
stun_codec = { workspace = true }
rand = "0.8.5"
bytecodec = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
ci = []
