[package]
name = "stream"
authors = ["rosingrind"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
howler = { workspace = true }
log = { workspace = true }
async-std = { workspace = true }
err = { package = "stream_err", path = "err" }

[target.'cfg(windows)'.dependencies]
wasapi = "0.12.0"
windows = { version = "*", default-features = false }
