[package]
name = "stream_err"
authors = ["rosingrind"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.11.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.34.0", default-features = false }

